[SP-679] Implement upload feature for senterpartiet
- added token and private keys for upload feature
- rearranged the inputs to separate the download and upload feature inputs
- added a new upload button to the HTML widget and implement the client JS to the click event listener
- adjusted the widget controller to get the upload image shop URL, which is a screen enabled only to upload files
- adjusted the getImageShopURL function to receive a new object parameter allows specify configs for the desired URL, and also mapped the SHOWONLYUPLOAD query param to the upload URL
- adjusted the getTemporaryToken to get the upload values from cfg file or app config
- adjusted the gradle and readme with information about the custom fork

--- a/src/main/resources/admin/widgets/iimage/iimage.html
+++ b/src/main/resources/admin/widgets/iimage/iimage.html
@@ -3,6 +3,7 @@
   th:data-import-image-service-url="${importImageServiceUrl}"
   th:data-sync-image-info-service-url="${syncImageInfoServiceUrl}"
   th:data-image-shop-url="${imageShopURL}"
+  th:data-image-shop-upload-url="${imageShopUploadURL}"
   th:data-strings="${stringsJson}"
 >
   <link rel="stylesheet" th:href="${portal.assetUrl({'_path=/css/styles.css'})}" />
@@ -24,7 +25,8 @@
   <div id="imageshop-message" class="imageshop-message-wrapper">
     <p>Successfull/Error message</p>
   </div>
-  <button type="button" id="imageshop-button" th:text="${strings.openImageShop}">Open ImageShop</button>
+  <button type="button" id="imageshop-button" th:text="${strings.openImageShop}">Insert from ImageShop</button>
+  <button type="button" id="imageshop-upload-button" th:text="${strings.uploadImage}">Upload new</button>
   <button th:if="${showSyncButton}" type="button" id="imageshop-sync-info-button" th:text="${strings.syncInfo}">Sync Info</button>
 
   <script th:src="${portal.assetUrl({'_path=/js/main.js'})}"></script>
