[IIMAGE-11] refactor: standardize Imageshop branding across the application
- Update all instances of "ImageShop" to "Imageshop" in:
  - README.md
  - gradle.properties
  - UI components (iimage.html, iimage.xml)
  - Application description
  - i18n phrases
  - JavaScript modules
  - Site configuration files
- Update SVG icon with new design

--- a/src/main/resources/admin/widgets/iimage/iimage.html
+++ b/src/main/resources/admin/widgets/iimage/iimage.html
@@ -24,7 +24,7 @@
   <div id="imageshop-message" class="imageshop-message-wrapper">
     <p>Successfull/Error message</p>
   </div>
-  <button type="button" id="imageshop-button" th:text="${strings.openImageShop}">Open ImageShop</button>
+  <button type="button" id="imageshop-button" th:text="${strings.openImageShop}">Open Imageshop</button>
   <button th:if="${showSyncButton}" type="button" id="imageshop-sync-info-button" th:text="${strings.syncInfo}">Sync Info</button>
 
   <script th:src="${portal.assetUrl({'_path=/js/main.js'})}"></script>
